--- a/ant-react/src/components/header.css
+++ b/ant-react/src/components/header.css
@@ -1,3 +1,32 @@
+.page-title {
+    position: relative;
+
+
+}
+
+.menu-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    text-align: center;
+    line-height: 1.33333333rem;
+    width: 1.33333333rem;
+    height: 1.33333333rem;
+}
+.icon-caidan {
+
+    font-size: 1rem;
+
+}
+
+.home-logo {
+    height: 100%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 0;
+}
+
 .icon-home {
     display: block;
     width: 2.2rem;
@@ -8,4 +37,80 @@
     background-image: url(https://img.alicdn.com/tfs/TB13DzOjXP7gK0jSZFjXXc5aXXa-212-48.png);
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.navigation-user {
+    height: 1.33333333rem;
+    width: 1.33333333rem;
+    text-align: center;
+    line-height: 1.33333333rem;
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #000;
+}
+
+.icon-yonghu-yuan {
+    font-size: .58666667rem;
+}
+
+.page-list {
+    display: flex;
+
+}
+
+.ace-developer-subdeveloper-com-left-nav {
+
+    background: #fff;
+    padding: 4px 8px;
+    padding-top: 1.33333333rem;
+    font-family: PingFangSC-Regular;
+}
+
+.left-nav-list {
+    display: inline-flex;
+}
+
+.left-nav-item {
+    padding: 0 10px;
+    border-radius: 0;
+
+    display: block;
+    width: 100%;
+    height: 38px;
+    text-align: center;
+    line-height: 38px;
+    font-size: 14px;
+    border-radius: 2px;
+    color: #181818;
+    white-space: nowrap;
+}
+
+.left-nav-item.active {
+    color: #ff6a00;
+}
+
+.left-nav-groups-box:before {
+    content: "";
+    height: 22px;
+    width: 1px;
+    background-color: #dcdee3;
+    position: absolute;
+    top: 11px;
+    left: 1px;
+}
+
+.left-nav-groups-box {
+    display: inline-block;
+    border-top: none;
+    width: auto;
+    padding: 0 15px;
+    color: #bbb;
+    cursor: not-allowed;
+
+    height: 44px;
+    line-height: 44px;
+    font-size: 14px;
+    position: relative;
+    text-align: center;
 }
